--- a/Assignment41/Base.lproj/Main.storyboard
+++ b/Assignment41/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="113" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="laU-LF-gAe">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="478"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MannersCell" rowHeight="113" id="0jz-aS-V1v" customClass="MannersCell" customModule="Assignment41" customModuleProvider="target">
@@ -41,10 +41,16 @@
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qY2-4i-qhL">
                                                             <rect key="frame" x="99" y="0.0" width="469" height="97"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
+                                                            <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                                <rect key="frame" x="99" y="0.0" width="269" height="97"/>
+                                                            </variation>
                                                         </label>
                                                     </subviews>
+                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                        <rect key="frame" x="16" y="8" width="368" height="97"/>
+                                                    </variation>
                                                 </stackView>
                                             </subviews>
                                             <constraints>
@@ -62,36 +68,133 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WJ5-e1-ZZZ">
+                                <rect key="frame" x="20" y="550" width="560" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="3zO-KT-Fdt"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                                <state key="normal" title="Send Summary"/>
+                                <connections>
+                                    <action selector="sendSummary:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6Vz-th-uox"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="WJ5-e1-ZZZ" firstAttribute="top" secondItem="laU-LF-gAe" secondAttribute="bottom" constant="8" id="5Cq-Cz-hsz"/>
                             <constraint firstAttribute="trailing" secondItem="laU-LF-gAe" secondAttribute="trailing" id="6db-RF-pcL"/>
                             <constraint firstItem="laU-LF-gAe" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="7uc-aV-3Bo"/>
+                            <constraint firstItem="WJ5-e1-ZZZ" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="DUU-BT-9BS"/>
+                            <constraint firstItem="WJ5-e1-ZZZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="FrQ-BM-4W3"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="WJ5-e1-ZZZ" secondAttribute="bottom" constant="20" id="RNZ-ta-FWZ"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="laU-LF-gAe" secondAttribute="bottom" id="dph-0V-oND"/>
                             <constraint firstItem="laU-LF-gAe" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="kkd-5L-M0Z"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="dph-0V-oND"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="jVu-Gh-RCZ">
                         <nil key="title"/>
                         <view key="titleView" contentMode="scaleToFill" id="fpU-jW-21Z">
-                            <rect key="frame" x="180" y="5.5" width="240" height="33"/>
+                            <rect key="frame" x="221.5" y="5.5" width="157" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Excuse-My-Manners" translatesAutoresizingMaskIntoConstraints="NO" id="uJb-xh-uyH">
-                                    <rect key="frame" x="0.0" y="0.0" width="240" height="33"/>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Excuse-My-Manners" translatesAutoresizingMaskIntoConstraints="NO" id="uJb-xh-uyH">
+                                    <rect key="frame" x="0.0" y="0.0" width="157" height="33"/>
                                     <color key="backgroundColor" red="0.040038232229999998" green="0.1775767888" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </imageView>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="uJb-xh-uyH" firstAttribute="leading" secondItem="fpU-jW-21Z" secondAttribute="leading" id="60s-Qc-M7k"/>
+                                <constraint firstItem="uJb-xh-uyH" firstAttribute="top" secondItem="fpU-jW-21Z" secondAttribute="top" id="7aL-sU-z3Q"/>
+                                <constraint firstItem="uJb-xh-uyH" firstAttribute="leading" secondItem="fpU-jW-21Z" secondAttribute="leading" id="P9W-Jg-LLE"/>
+                                <constraint firstAttribute="bottom" secondItem="uJb-xh-uyH" secondAttribute="bottom" id="Pbb-us-GeN"/>
+                                <constraint firstAttribute="trailing" secondItem="uJb-xh-uyH" secondAttribute="trailing" id="SaV-1J-KbL"/>
+                                <constraint firstAttribute="trailing" secondItem="uJb-xh-uyH" secondAttribute="trailing" id="Yxl-V9-1s7"/>
+                                <constraint firstAttribute="bottom" secondItem="uJb-xh-uyH" secondAttribute="bottom" id="pIW-Ov-HqD"/>
+                                <constraint firstItem="uJb-xh-uyH" firstAttribute="top" secondItem="fpU-jW-21Z" secondAttribute="top" id="tvr-TH-V3b"/>
+                            </constraints>
+                            <variation key="default">
+                                <mask key="constraints">
+                                    <exclude reference="7aL-sU-z3Q"/>
+                                    <exclude reference="P9W-Jg-LLE"/>
+                                    <exclude reference="Pbb-us-GeN"/>
+                                    <exclude reference="SaV-1J-KbL"/>
+                                </mask>
+                            </variation>
+                            <variation key="heightClass=regular-widthClass=compact">
+                                <mask key="constraints">
+                                    <include reference="7aL-sU-z3Q"/>
+                                    <include reference="P9W-Jg-LLE"/>
+                                    <include reference="Pbb-us-GeN"/>
+                                    <include reference="SaV-1J-KbL"/>
+                                </mask>
+                            </variation>
                         </view>
+                        <barButtonItem key="rightBarButtonItem" image="gear" id="BZ6-s8-7h3">
+                            <connections>
+                                <segue destination="2VK-RO-c9n" kind="show" identifier="sendEmails" id="XAG-5Z-C8H"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="mannersTable" destination="laU-LF-gAe" id="wxf-fH-5VS"/>
+                        <outlet property="summaryBtn" destination="WJ5-e1-ZZZ" id="dcD-GS-i71"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1092" y="337"/>
+            <point key="canvasLocation" x="1092" y="336"/>
+        </scene>
+        <!--EmailVC-->
+        <scene sceneID="NHF-5r-0a4">
+            <objects>
+                <viewController id="2VK-RO-c9n" customClass="EmailVC" customModule="Assignment41" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="vpB-vc-0ZU"/>
+                        <viewControllerLayoutGuide type="bottom" id="cyS-eb-XH8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="nbR-ub-r8f">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Send summary emails to:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hFV-H2-aRM">
+                                <rect key="frame" x="20" y="72" width="560" height="84"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="84" id="AYy-US-Cbg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nl8-Kx-wzd">
+                                <rect key="frame" x="20" y="164" width="560" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" enablesReturnKeyAutomatically="YES"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hFV-H2-aRM" firstAttribute="top" secondItem="vpB-vc-0ZU" secondAttribute="bottom" constant="8" id="1sp-cV-QPB"/>
+                            <constraint firstItem="Nl8-Kx-wzd" firstAttribute="top" secondItem="hFV-H2-aRM" secondAttribute="bottom" constant="8" id="2jE-o4-RKL"/>
+                            <constraint firstItem="hFV-H2-aRM" firstAttribute="leading" secondItem="nbR-ub-r8f" secondAttribute="leadingMargin" id="3Ac-jC-uz8"/>
+                            <constraint firstItem="Nl8-Kx-wzd" firstAttribute="leading" secondItem="nbR-ub-r8f" secondAttribute="leadingMargin" id="K3M-3s-kVh"/>
+                            <constraint firstItem="hFV-H2-aRM" firstAttribute="trailing" secondItem="nbR-ub-r8f" secondAttribute="trailingMargin" id="PsZ-rm-D10"/>
+                            <constraint firstItem="Nl8-Kx-wzd" firstAttribute="trailing" secondItem="nbR-ub-r8f" secondAttribute="trailingMargin" id="nlS-Jt-DLV"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="emailAddressTxt" destination="Nl8-Kx-wzd" id="6Nj-sb-2d5"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hHE-5u-u5Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2048" y="92"/>
         </scene>
         <!--MannersVC-->
         <scene sceneID="awi-wA-Sv5">
@@ -142,7 +245,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nvD-o9-59C" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1783" y="337"/>
+            <point key="canvasLocation" x="2039" y="929"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="hLa-lP-L4C">
@@ -165,5 +268,6 @@
     </scenes>
     <resources>
         <image name="Excuse-My-Manners" width="803" height="145"/>
+        <image name="gear" width="35" height="35"/>
     </resources>
 </document>
